--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" &&  mocha server/**/*.test.js",
+    "start-watch": "nodemon server/server.js",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" &&  mocha server/**/*.test.js --exit --timeout 10000",
     "test-watch": "nodemon --exec 'npm test'"
   },
   "author": "",
