--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "validator": "^9.4.1"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
     "expect": "^22.4.3",
     "mocha": "^5.0.5",
     "supertest": "^3.0.0"
